network/proxy/mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tfb-network-db
  namespace: tfb-servers
spec:
  serviceName: "tfb-network-db"
  replicas: 1
  selector:
    matchLabels:
      app: tfb-network-db
  template:
    metadata:
      labels:
        app: tfb-network-db
    spec:
      nodeSelector:
        topology.kubernetes.io/region: hel1
      containers:
      - name: mariadb
        image: mariadb:11.7.2
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "2Gi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql
        - name: config-volume
          mountPath: /etc/mysql/mariadb.conf.d/99-bind-address.cnf
          subPath: my.cnf
      volumes:
      - name: config-volume
        configMap:
          name: mariadb-config
  volumeClaimTemplates:
  - metadata:
      name: db-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
