network/proxy/tfb-network-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfb-network-db
  namespace: tfb-servers
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    run: proxy
