network/proxy/plan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plan-ingress
  namespace: tfb-servers
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  tls:
  - hosts:
    - stats.theflyingbirds.net
    secretName: plan-tls
    issuerRef:
      name: cloudflare-clusterissuer
      kind: ClusterIssuer
  rules:
  - host: stats.theflyingbirds.net
    http:
      paths:
      - backend:
          service:
            name: proxy
            port:
              number: 8804
        path: /
        pathType: Prefix
