network/proxy/proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flamecord-ingress
  namespace: tfb-servers
  annotations:
    cert-manager.io/cluster-issuer: theflyingbirds-prod
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
spec:
  rules:
  - host: mc.theflyingbirds.net
    http:
      paths:
      - backend:
          service:
            name: proxy
            port:
              number: 25565
        path: /
        pathType: Prefix
